[package]
name = "avp"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Simple multimedia player"
license = "MIT"
repository = "https://github.com/rust-av/avp"
readme = "README.md"
keywords = ["player","rust-av","sdl2"]

[dependencies]
clap = "2.24.1"
sdl2 = "0.31"
av-data = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
av-codec = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
av-format = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
libvpx = { version = "0.1.0", git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
libopus = { version = "0.1.0", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
